--- a/app/src/main/res/layout/activity_pagina_principal.xml
+++ b/app/src/main/res/layout/activity_pagina_principal.xml
@@ -35,16 +35,15 @@
 
                 <ImageButton
                     android:id="@+id/btInicio"
-                    android:layout_width="59dp"
-                    android:layout_height="53dp"
-                    android:background="#00FFFFFF"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/img_icono"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.045"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintHorizontal_bias="0.044"
+                    app:layout_constraintStart_toStartOf="@+id/imageView"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.031"
-                    tools:srcCompat="@drawable/img_icono" />
+                    app:layout_constraintVertical_bias="0.035" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -66,23 +65,23 @@
 
                 <ImageView
                     android:id="@+id/imageView2"
-                    android:layout_width="120dp"
+                    android:layout_width="116dp"
                     android:layout_height="140dp"
-                    android:layout_marginStart="13dp"
+                    android:layout_marginStart="15dp"
                     android:background="@drawable/img_pantallaprincipal_miercoles" />
 
                 <ImageView
                     android:id="@+id/imageView3"
-                    android:layout_width="120dp"
+                    android:layout_width="116dp"
                     android:layout_height="140dp"
-                    android:layout_marginStart="13dp"
+                    android:layout_marginStart="15dp"
                     android:background="@drawable/img_pantallaprincipal_elite" />
 
                 <ImageView
                     android:id="@+id/imageView4"
-                    android:layout_width="120dp"
+                    android:layout_width="116dp"
                     android:layout_height="140dp"
-                    android:layout_marginStart="13dp"
+                    android:layout_marginStart="15dp"
                     android:background="@drawable/img_pantallaprincipal_walking" />
             </LinearLayout>
 
