--- a/app/src/main/res/layout/activity_pagina_reproductor.xml
+++ b/app/src/main/res/layout/activity_pagina_reproductor.xml
@@ -6,4 +6,44 @@
     android:layout_height="match_parent"
     tools:context=".PaginaReproductor">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/black"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/img_reproductor"
+            android:layout_width="match_parent"
+            android:layout_height="332dp"
+            android:background="@drawable/img_pantallaprincipal_miercoles" />
+
+        <TextView
+            android:id="@+id/textNomSerie"
+            android:layout_width="match_parent"
+            android:layout_height="59dp"
+            android:text="TextView"
+            android:textColor="@color/white" />
+
+        <Button
+            android:id="@+id/btReproducir"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Reproducir" />
+
+        <Button
+            android:id="@+id/btDescargar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Descargar T1:1" />
+
+        <TextView
+            android:id="@+id/textDescrip"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:autoSizeTextType="uniform"
+            android:text="TextView"
+            android:textColor="@color/white" />
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
