--- a/app/src/main/res/layout/activity_pagina_reproductor.xml
+++ b/app/src/main/res/layout/activity_pagina_reproductor.xml
@@ -27,12 +27,40 @@
         <TextView
             android:id="@+id/textNomSerie"
             android:layout_width="match_parent"
-            android:layout_height="59dp"
+            android:layout_height="55dp"
             android:autoSizeTextType="uniform"
             android:padding="5dp"
             android:text="TextView"
             android:textColor="@color/white"
             android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textAnyo"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="Text"
+                android:textAlignment="center" />
+
+            <Button
+                android:id="@+id/btAnyosCalif"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:background="@android:color/holo_red_dark"
+                android:text="000" />
+
+            <TextView
+                android:id="@+id/textCapit"
+                android:layout_width="110dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="TextView" />
+        </LinearLayout>
 
         <Button
             android:id="@+id/btReproducir"
@@ -49,7 +77,7 @@
         <TextView
             android:id="@+id/textDescrip"
             android:layout_width="match_parent"
-            android:layout_height="142dp"
+            android:layout_height="118dp"
             android:autoSizeTextType="uniform"
             android:padding="5dp"
             android:text="TextView"
